[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Labels" type="Node2D" parent="."]
position = Vector2( 320, 50 )

[node name="Titel" type="Label" parent="Labels"]
margin_left = -87.0
margin_top = 25.0
margin_right = -29.0
margin_bottom = 39.0
rect_scale = Vector2( 3, 3 )
text = "Chomper"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitel" type="Label" parent="Labels"]
margin_left = -67.0
margin_top = 65.0
margin_right = 69.0
margin_bottom = 79.0
text = "Hungry For Extinction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 320, 150 )

[node name="Start" type="Button" parent="Buttons"]
margin_left = -50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 45.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowTo" type="Button" parent="Buttons"]
margin_left = -50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 75.0
text = "How To"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Buttons"]
margin_left = -50.0
margin_top = 80.0
margin_right = 50.0
margin_bottom = 105.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/HowTo" to="." method="_on_HowTo_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
